* v0.73, 3 May 2005

   Change cast of errno in Carbon.h to make it build under gcc 4.  (Sherm Pendley)


* v0.72, 9 March 2005

   Fix Makefile to work with latest ExtUtils::MakeMaker beta. (Michael Schwern)

   Add OSAGetProperty/OSASetProperty to Mac::OSA.

* v0.71, 19 February 2005

   Fix some more memory leaks, in the ported GUSI routines.  Well, technically,
   the memory leaks are still there: the return values of GUSIFSp2FullPath,
   GUSIFS2FullPath, and GUSIFSp2Encoding need to be freed, and some frontend
   functions were added to return SVs instead, freeing the values as
   necessary.


* v0.70, 10 May 2004

   Fix some major memory leaks in Mac::AppleEvents.  Due to a necessary change
   for Mac OS X, caller of AEDesc->data method is now responsible for disposing of
   the returned Handle object with Handle->dispose.

   Improve Mac::Notification tests.

   Clean up docs; add notes about gcc versions.


* v0.66, 23 March 2004

   Fix _Unix2Mac to be more robust, by making it more limited: it must point
   to a file (existing or not) in an existing directory.  This limitation is
   not unusual, and it is extremely rare that you would want to pass a path
   to a file in a directory that did not already exist.

* v0.65, 9 March 2004

   DirectoryCopy.c and FileCopy.c in MoreFiles have issues with G5 optimization
   flags; ignore those flags for compiling MoreFiles. (John Siracusa)

   Clean up tests, including turning GUI tests off by default (add
   MAC_CARBON_GUI=1 to `make test` to turn on) and ability to turn
   off sound (add MAC_CARBON_SOUND=0 to turn off).  Affected tests
   include MacPerl, Notification, Sound, and Speech.


* v0.64, 18 February 2004

   *Export* typeApplicationBundleID target type constant.

   Remove Mac::Path::Util dependence and add _Unix2Mac to Mac::Files instead.

* v0.63, 19 November 2003

   Add typeApplicationBundleID target type constant.


* v0.62, 31 October 2003

   Fix incorrect constant for typeApplicationURL.

